Enhance UI/UX and improve mobile responsiveness
This commit introduces several modifications aimed at enhancing the user interface and experience across the application while boosting mobile responsiveness. Major highlights include:

1. Reorganized HTML meta tags and links to optimize loading and display settings, incorporating a default theme color and description for improved SEO and branding.
2. Adjusted the project list layout and responsive design elements in CSS files, making the interface more fluid and adaptable to various screen sizes.
3. Enhanced navigation interaction by implementing a click-outside listener to close settings menus, improving usability and focus management.
4. Refactored the Header component to support the dynamic handling of settings visibility, contributing to a more intuitive user interaction.
5. Enriched content with the addition of a "Who am I?" section on the homepage, providing visitors with a deeper insight into the personal brand and professional orientation.
6. Optimized overall site aesthetic through subtle styling adjustments—such as increased letter-spacing for readability, refined border radii for a modern feel, and updated CSS variables for consistent theming.
7. Improved project deletion UX with redesigned delete buttons, making the interface cleaner and more intuitive.
8. Redefined mixins for repeated styles, enhancing code maintainability and consistency across the application.

These changes collectively aim to offer a polished, responsive, and engaging user experience, emphasizing clarity, accessibility, and a cohesive visual identity.

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -9,14 +9,21 @@
     "top-content": {
       "p1": "Hi!",
       "p2": "I'm John Lin",
-      "p3": "A full stack web developer.",
-      "p4": "There's nothing here yet.",
-      "p5": "Coming soon..."
+      "p3": "Content is being prepared.",
+      "p4": "Coming soon..."
+    },
+    "who_am_i": {
+      "title": "Who am I?",
+      "p1": "I am John Lin.",
+      "p2": "A web designer and React developer who pursues creative freedom, enjoying the infusion of minimalist aesthetics and dynamic effects in interfaces.",
+      "p3": "I hold a critical view of the education system, believing in the value of creativity and independent thinking. I hope to break through existing frameworks to create more space for self-directed exploration for the next generation.",
+      "p4": "I aspire to find a balance between work and life, integrating my interests into my daily life to realize my sense of self-worth."
     }
   },
   "project": {
     "title": "Project",
     "detail": {
+      "": "",
       "author": "Author",
       "anonymous": "Anonymous",
       "startDate": "Start Date",
