--- a/src/i18n/locales/zh-TW.json
+++ b/src/i18n/locales/zh-TW.json
@@ -9,14 +9,21 @@
     "top-content": {
       "p1": "嗨！",
       "p2": "我是林昌龍",
-      "p3": "一個全端網頁開發者，",
-      "p4": "這裡目前還沒有任何東西。",
-      "p5": "即將到來..."
+      "p3": "內容正在準備中...",
+      "p4": "快要來了！"
+    },
+    "who_am_i": {
+      "title": "我是誰？",
+      "p1": "我是林昌龍。",
+      "p2": "一位追求自由創作的網頁設計師與 React 開發者，喜歡在介面中融入簡約的美感與動態效果。",
+      "p3": "對教育體制持批判態度，堅信創意與獨立思考的價值，希望未來能突破框架為下一代帶來更多自主探索的空間。",
+      "p4": "期望在工作與生活中找到平衡，將興趣融入生活，實現自我價值。"
     }
   },
   "project": {
     "title": "專案",
     "detail": {
+      "": "",
       "author": "作者",
       "anonymous": "未署名",
       "startDate": "開始日期",
