--- a/src/i18n/locales/zh-TW.json
+++ b/src/i18n/locales/zh-TW.json
@@ -3,7 +3,11 @@
     "title": "林昌龍",
     "home": "首頁",
     "posts": "文章",
-    "project": "專案"
+    "project": "專案",
+    "setting": "設定"
+  },
+  "footer": {
+    "copyright": "保留所有權利。"
   },
   "home": {
     "top-content": {
@@ -15,9 +19,12 @@
     "who_am_i": {
       "title": "我是誰？",
       "p1": "我是林昌龍。",
-      "p2": "一位追求自由創作的網頁設計師與 React 開發者，喜歡在介面中融入簡約的美感與動態效果。",
-      "p3": "對教育體制持批判態度，堅信創意與獨立思考的價值，希望未來能突破框架為下一代帶來更多自主探索的空間。",
-      "p4": "期望在工作與生活中找到平衡，將興趣融入生活，實現自我價值。"
+      "title_1": "網頁設計師",
+      "text_1": "一位追求自由創作的網頁設計師與 React 開發者，喜歡在介面中融入簡約的美感與動態效果。",
+      "title_2": "信念",
+      "text_2": "對教育體制持批判態度，堅信創意與獨立思考的價值，希望未來能突破框架為下一代帶來更多自主探索的空間。",
+      "title_3": "期望",
+      "text_3": "期望在工作與生活中找到平衡，將興趣融入生活，實現自我價值。"
     }
   },
   "project": {
@@ -48,5 +55,10 @@
       "en-US": "英文",
       "zh-TW": "中文 (台灣)"
     }
+  },
+  "imageViewer": {
+    "zoomIn": "放大",
+    "zoomOut": "縮小",
+    "reset": "重置"
   }
 }
