Migrate project to TypeScript, enhancing codebase
Refactored the entire codebase to use TypeScript, aiming to improve development efficiency and code quality. This transition includes updating dependencies to support TypeScript, converting part of existing JSX files to TSX, and implementing types and interfaces for better type safety. Notably, this involved adding TypeScript configuration, retrofitting type declarations across components, and addressing statically typed challenges in Redux store configurations. Enhanced readability and maintainability of the code should facilitate future expansions and debugging efforts.

- Introduced TypeScript and its associated types for React, Node, Jest, and other key libraries, ensuring comprehensive type checking.
- Migrated all components, pages, and utility functions from JSX to TSX, carefully adding type annotations throughout.
- Adjusted `tsconfig.json` for optimal compatibility with the current project structure and React's ecosystem.
- Refactored Redux store setup to use TypeScript conventions, including type definitions for the state and dispatch functions.

This shift positions the project for more robust development practices and aligns with modern TypeScript-based React application standards.

--- a/src/i18n/locales/zh-TW.json
+++ b/src/i18n/locales/zh-TW.json
@@ -19,12 +19,44 @@
     "who_am_i": {
       "title": "我是誰？",
       "p1": "我是林昌龍。",
-      "title_1": "網頁設計師",
-      "text_1": "一位追求自由創作的網頁設計師與 React 開發者，喜歡在介面中融入簡約的美感與動態效果。",
-      "title_2": "信念",
-      "text_2": "對教育體制持批判態度，堅信創意與獨立思考的價值，希望未來能突破框架為下一代帶來更多自主探索的空間。",
-      "title_3": "期望",
-      "text_3": "期望在工作與生活中找到平衡，將興趣融入生活，實現自我價值。"
+      "personality": {
+        "title": "性格",
+        "contents": [
+          "我認為自己是一個追尋內心真實感受、善於自省的人，總是會深入思考事物的本質，探索自我與外界的連結，也更傾向於用自己的價值觀去看待世界。",
+          "我多數時候是 INFP-A 型人格，我對人和事物有敏銳的觀察力，我常透過觀察來理解別人的情緒與需求，並希望能在自己力所能及的範圍內，帶來一些正面的影響。我相信在真誠的交流中，能夠發現人與人之間的連結，而我也願意成為支持家人、朋友的力量，幫助彼此共同成長。",
+          "我不喜歡受限於既定規範，更偏向從內在的動力出發，用心去創造屬於自己的生活。在遇到挑戰時，我能夠平常心面對，並尋求解決的辦法。我認為困難是一種成長的機會，而我也相信，只要用心面對，最終都能有所突破。",
+          "我也有些完美主義，特別是在自己投入的專案上會特別執著於細節。我喜歡在作品中加入個人特色，並且希望每一項設計都能夠完整呈現我的想法和價值觀。"
+        ]
+      },
+      "interest": {
+        "title": "興趣",
+        "contents": [
+          "我是一個對設計和程式開發充滿熱情的人，特別是網頁設計。React.js 是我常用的框架，它擁有足夠的彈性，能讓我實現自己對界面的各種創意構想。對我來說，設計不只是解決問題，還是一種表達方式，我希望我的作品能在簡潔中傳遞出我對細節的重視。",
+          "除了技術層面的興趣，我也喜歡思考和反思社會現象。無論是自我信念與社會觀念的釐清，還是教育對我們的影響，這些都是我感興趣的話題。我經常觀察身邊的事物和人，透過這些觀察來加深對這個世界的理解，並試著從中找到自己認同的生活方式和價值觀。"
+        ]
+      },
+      "skills": {
+        "title": "專長",
+        "contents": [
+          "我的專長在於網頁設計與平面設計，特別是在用戶介面和簡報設計方面。我對設計中的「呼吸感」和「和諧感」非常敏銳，即使沒有深入鑽研設計理論，我也能自然地找到畫面中的平衡點。當遇到需要品牌設計的項目時，我可以根據項目的特色量身打造出適合的簡報、宣傳海報，讓視覺表現更貼近品牌精神。"
+        ]
+      },
+      "beliefs_and_values": {
+        "title": "信念與價值觀",
+        "contents": [
+          "我對自由和自我驅動的生活方式非常重視，認為生活的核心就是能夠隨心所欲地去做自己真正喜愛的事。",
+          "我相信工作不應該被生活隔離開來，而是能與生活自然融合，成為日常的一部分，而不是沉重的負擔。因此，我向往的職業模式是自由工作，讓我有空間去追隨自己的興趣，同時也保持充實。",
+          "我也有自己對愛與家庭的看法。我認為愛情和親情的基礎是相互理解與信任。我相信這樣的愛，會讓彼此無條件的互相支持共同成長，這會是我背後最堅強的力量。愛的本質應該是心靈的連結，並且無論遇到什麼挑戰，彼此都能支持和成就對方。",
+          "在教育方面，我對現行的體制有些質疑。台灣教育模式中的僵化規則讓我感到壓抑，認為它扼殺了創造力和自我表達的空間。教育應該要能幫助孩子發掘自己，而不只是讓人接受知識，畢竟教育的意義不該只是像工廠一樣讓每個人變得相似，而是讓每個人找到屬於自己的道路。"
+        ]
+      },
+      "dreams": {
+        "title": "夢想",
+        "contents": [
+          "我的夢想是擁有一個真正自由的生活，不被世俗的框架和時間的束縛所限制。我希望能夠成為一名自由工作者，把興趣變成我的工作，而工作將與我的生活自然的融合在一起。我嚮往可以隨心所欲創作的生活，讓自己能在不同領域持續學習和成長，而不必受到傳統職場的壓力與制約。",
+          "另外，我也希望能為下一代創造一個自由、富有想像力與創造力的成長環境。我希望未來我的孩子能在一個不被壓抑的教育體制中成長，保有那份好奇心與想像力，讓他們真正愛上學習，享受在其中而不感到疲憊。這是一件超越個人目標的夢想，讓教育不再是競爭的場所，而是真正幫助人們成長和成就自我的地方。"
+        ]
+      }
     }
   },
   "project": {
