Added new features, refactored project page
- Introduced `@react-spring/web` and `@react-three/fiber` for enhanced animation and 3D graphics capabilities in the UI.
- Updated development dependencies including TypeScript and added types for new libraries to improve developer experience and ensure type safety.
- Refactored Project page to utilize modular components for better maintainability and readability.
- Implemented animation effects across various components, including the Project list, using `@react-spring/web` to enhance UI interactions.
- Integrated a new Posts page, featuring placeholder content, preparing the ground for future blog functionality.
- Simplified and structured SCSS files for better styling management.
- Enhanced accessibility and interaction by refining keyboard navigability and visual feedback.
- Addressed minor UI bugs and improved responsiveness across devices.

These changes aim to make the application more engaging and visually appealing while laying groundwork for upcoming features such as an interactive blog section.

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -10,15 +10,14 @@
     "copyright": "All rights reserved."
   },
   "home": {
-    "top-content": {
-      "p1": "Hi!",
-      "p2": "I'm John Lin",
-      "p3": "Content is being prepared.",
-      "p4": "Coming soon..."
-    },
+    "top-content": [
+      "Hi! I'm John Lin",
+      "Content is being prepared.",
+      "Coming soon..."
+    ],
     "who_am_i": {
-      "title": "Who am I?",
-      "p1": "I am John Lin.",
+      "title": "Hi! I am John Lin.",
+      "p1": "New design is being prepared...",
       "personality": {
         "title": "Personality",
         "contents": [
@@ -69,11 +68,18 @@
       "endDate": "End Date",
       "tags": "Tags",
       "Video Resolution": "Video Resolution",
+      "Photo Resolution": "Photo Resolution",
+      "Shooting Time": "Shooting Time",
+      "Copyright": "Copyright",
       "Subject": "Subject",
       "Exam Time": "Exam Time",
       "createdAt": "Created At"
     },
     "projectNotFound": "Project Not Found"
+  },
+  "posts": {
+    "title": "Posts",
+    "content": "Content is being prepared..."
   },
   "settings": {
     "title": "Settings",
