Add Firebase functions and improve user interface
Feature Enhancement/Addition:
- Introduces a new Firebase function for URL redirection, adding support for retrieving the original URL via short code with error handling for not found or server issues.
- Implements a `usePosts` hook for managing posts within the Firestore database with live updates on changes.

Dependencies Update:
- Updates `firebase-admin` and `firebase-functions` to the latest versions ensuring compatibility with newly added functionalities.
- Implements Firebase emulator configurations for local development to connect Firestore and functions.

UI Adjustments:
- Enables the disabled New Year countdown and snow effect features within the React app.
- Modifies z-index in several components (e.g., fireworks, header) for improved layering and visibility.
- Adjusts the Apple startup splash images to correct paths for local development.

General Improvements:
- Adds `.gitignore` file to prevent committing `node_modules` and local configuration files.
- Updates package and package-lock files with dependency adjustments to maintain build stability.
- Refines CSS and SCSS styles across several components to meet design requirements and enhance user experience.

Localization:
- Extends translation files with new terms related to the Shortcut URL Generator and alert messages.

These comprehensive updates streamline user interactions, enhance frontend aesthetics, and ensure robust backend operations.

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -124,6 +124,13 @@
     "zoomOut": "Zoom Out",
     "reset": "Reset"
   },
+  "shortcutUrlGenerator": {
+    "title": "Shortcut Url Generator",
+    "inputUrl": "Input the url you want to shorten",
+    "generate": "Generate short url",
+    "shortUrl": "Short url",
+    "originalUrl": "Original url"
+  },
   "snow": {
     "controls": "Snow Controls",
     "density": "Density",
@@ -175,5 +182,8 @@
     "hours": "H",
     "minutes": "M",
     "seconds": "S"
+  },
+  "alert": {
+    "invalidUrl": "Please enter a valid URL"
   }
 }
