--- a/src/i18n/locales/zh-TW.json
+++ b/src/i18n/locales/zh-TW.json
@@ -125,6 +125,13 @@
     "zoomOut": "縮小",
     "reset": "重置"
   },
+  "shortcutUrlGenerator": {
+    "title": "短網址產生器",
+    "inputUrl": "輸入你想縮短的網址",
+    "generate": "產生短網址",
+    "shortUrl": "短網址",
+    "originalUrl": "原始網址"
+  },
   "snow": {
     "controls": "雪的設定",
     "density": "密度",
@@ -176,5 +183,8 @@
     "hours": "小時",
     "minutes": "分鐘",
     "seconds": "秒"
+  },
+  "alert": {
+    "invalidUrl": "請輸入有效的網址"
   }
 }
