Integrated FullCalendar Libraries and Refined UI for Enhanced Scheduling Features
Feature Enhancement/Addition:
- Introduced the FullCalendar library to support advanced scheduling capabilities, including day-grid and time-grid views, interaction, and integration with React components, enriching the application's calendar and scheduling functionality.
- Added new Calendar and ScheduleModal components, establishing a foundation for feature-rich calendar interactions such as event clicking, dragging, and resizing.
- Created new routes and linked calendar functionalities in the application's main navigation, enhancing the user navigation experience and access to the scheduling feature.
- Enhanced user sign-in flow to create a new user document in Firestore if not already present, ensuring user data consistency across the application.

UI Adjustments:
- Implemented new color variables and calendar-specific styles in the global theme.css and dynamically adjusted them based on the selected theme.
- Refined overall styling consistency of modals, buttons, and control panels across the application.
- Adjusted link hover color and text styles for improved readability and visual appeal.
- Streamlined layout of the App component by removing obsolete code related to logo animations and other unused CSS properties.

Refactoring:
- Simplified routing paths by renaming 'laboratory' to 'lab' for brevity and updated corresponding navigation elements.

Dependencies Update:
- Added several packages including @fullcalendar/core and its related plugins to enable comprehensive calendar functionalities.

Documentation:
- Updated localization files for enhanced internationalization support, adding new entries specific to scheduling features and updating existing translations to reflect new functionalities.

Other Relevant Categories:
- Adjusted Firestore security rules and involved handling of user documents for better security and performance when handling user data during sign-in.

Commit

--- a/src/i18n/locales/common/en-US.json
+++ b/src/i18n/locales/common/en-US.json
@@ -12,6 +12,16 @@
     "seconds": "S"
   },
   "alert": {
+    "pls_login": "Please login",
     "invalidUrl": "Please enter a valid URL"
+  },
+  "status": {
+    "loading": "Loading"
+  },
+  "button": {
+    "save": "Save",
+    "cancel": "Cancel",
+    "edit": "Edit",
+    "delete": "Delete"
   }
 }
