Major Overhaul with New Features and Refinements
Feature Enhancement/Addition:
- Introduced a dark and auto theme mode in addition to the existing light mode, enhancing visual comfort for different environments.
- Implemented a new metadata component to manage SEO more effectively across different parts of the application.
- Enhanced the Laboratory section with a new categorized project listing, improving navigation and user experience.
- Added comprehensive handling for creating, updating, and deleting portfolios and blogs, expanding the admin functionalities.

Bug Fix:
- Corrected the authorization and login logic by refining the Redux state management ensuring robust user authentication.

Performance Optimization:
- Optimized Firestore queries in the scheduling feature by adding orderBy clauses to sort data effectively, leading to quicker retrieval times.

UI Adjustments:
- Overhauled the entire color scheme for UI elements across light and dark themes to maintain consistency and visual appeal.
- Refined the user interface in the Portfolio and Laboratory sections with new layout arrangements, icons, and interactive components.

Refactoring:
- Major refactoring in the Project and Laboratory sections, splitting components into smaller, more manageable parts.
- Replaced various CSS modules with SCSS across components, streamlining style management and enhancing customization capabilities.

Dependencies Update:
- Upgraded Firebase library to leverage newer cloud functions and improve database interactions.
- Removed unused dependencies related to URL handling and date management, simplifying the project structure.

Documentation:
- Updated README and inline documentation to reflect changes in project structure and new functionalities.

Other Relevant Categories:
- Enhanced error handling and user feedback mechanisms including new error message displays.

Commit Summary:
This commit introduces significant enhancements with new features like dark mode, improved SEO han

--- a/src/i18n/locales/common/en-US.json
+++ b/src/i18n/locales/common/en-US.json
@@ -1,5 +1,10 @@
 {
   "locale": "en-US",
+  "website": {
+    "title": "John Lin",
+    "author": "John Lin",
+    "description": "Web designer and developer."
+  },
   "switch": {
     "open": "Open",
     "close": "Close"
