--- a/src/i18n/locales/components/header/en-US.json
+++ b/src/i18n/locales/components/header/en-US.json
@@ -2,7 +2,7 @@
   "title": "John Lin",
   "home": "Home",
   "posts": "Posts",
-  "project": "Project",
+  "portfolio": "Portfolio",
   "setting": "Setting",
   "laboratory": "Laboratory"
 }
