--- a/src/i18n/locales/components/header/zh-TW.json
+++ b/src/i18n/locales/components/header/zh-TW.json
@@ -2,7 +2,7 @@
   "title": "林昌龍",
   "home": "首頁",
   "posts": "文章",
-  "project": "專案",
+  "portfolio": "作品集",
   "setting": "設定",
   "laboratory": "實驗室"
 }
