--- a/src/i18n/locales/components/settings/en-US.json
+++ b/src/i18n/locales/components/settings/en-US.json
@@ -3,7 +3,8 @@
   "theme": {
     "title": "Theme",
     "light": "Light",
-    "dark": "Dark"
+    "dark": "Dark",
+    "auto": "Auto"
   },
   "language": {
     "title": "Language",
