--- a/src/i18n/locales/components/settings/zh-TW.json
+++ b/src/i18n/locales/components/settings/zh-TW.json
@@ -3,7 +3,8 @@
   "theme": {
     "title": "主題",
     "light": "淺色",
-    "dark": "深色"
+    "dark": "深色",
+    "auto": "自動"
   },
   "language": {
     "title": "語言",
