--- a/src/i18n/locales/pages/shortcutUrlGenerator/zh-TW.json
+++ b/src/i18n/locales/pages/shortcutUrlGenerator/zh-TW.json
@@ -1,7 +1,21 @@
 {
-  "title": "短網址產生器",
-  "inputUrl": "輸入你想縮短的網址",
-  "generate": "產生短網址",
-  "shortUrl": "短網址",
-  "originalUrl": "原始網址"
+  "title": "網址縮短器",
+  "description": "將長網址轉換成短網址",
+  "content": {
+    "inputUrl": "輸入你想縮短的網址",
+    "generate": "產生短網址",
+    "shortUrl": "短網址",
+    "originalUrl": "原始網址",
+    "customCode": "自訂短碼",
+    "inputCustomCode": "輸入自訂短碼",
+    "customCodeLimit": "限英文大小寫、數字、-，長度至少 3 個字元",
+    "copied": "已複製到剪貼簿"
+  },
+  "error": {
+    "lengthTooShort": "這網址已經夠短了...",
+    "urlTooLong": "這網址也太長了...必須縮短！",
+    "invalidUrl": "這網址好像不完整...",
+    "customCodeExists": "此短碼已被使用",
+    "unknownError": "未知錯誤"
+  }
 }
