Refactors app structure and enhances theme and language controls
Feature Enhancement/Addition:
- Introduces `SystemProvider` context for centralized theme and language management.
- Adds new laboratory projects: Color Judge Game, Text Counter, and Tone Generator with corresponding routes and i18n support.

UI Adjustments:
- Updates primary color for theme to improve visual consistency.
- Refines header layout and menu interaction for better user experience.
- Enhances laboratory tool card display with status badges.

Refactoring:
- Splits `App.tsx` into `AppWrapper` and `AppContent` for better separation of concerns.
- Replaces FontAwesome icons with a custom `Icon` component for better modularity.
- Moves theme and language logic into custom hooks and context for cleaner architecture.

Documentation:
- Extends i18n localization files to support new features.
- Improves inline comments to reflect new system control structures.

Commit Summary:
Refactors the application to utilize a centralized system context for theme and language management. Introduces new laboratory features, refines UI elements, and enhances code modularity and maintainability.

--- a/src/i18n/locales/pages/laboratory/en-US.json
+++ b/src/i18n/locales/pages/laboratory/en-US.json
@@ -8,14 +8,33 @@
     },
     "schedule": {
       "title": "Schedule (WIP)",
-      "description": "AI-driven schedule management tool, can automatically add schedules using text or images. (There is a performance issue, which may cause your device to overheat.)"
+      "description": "AI-driven schedule management tool, can automatically add schedules using text or images."
+    },
+    "colorJudgeGame": {
+      "title": "Color Judge Game (WIP)",
+      "description": "A game to test your color judgment skills."
+    },
+    "textCounter": {
+      "title": "Text Counter (WIP)",
+      "description": "Count the number of characters in a text."
+    },
+    "toneGenerator": {
+      "title": "Tone Generator",
+      "description": "Generate specific frequency tones for audio equipment testing."
     }
   },
   "tags": {
     "utilities": "Utilities",
     "organizers": "Organizers",
     "creators": "Creators",
-    "entertainment": "Entertainment"
+    "entertainment": "Entertainment",
+    "games": "Games",
+    "focus": "Focus"
+  },
+  "status": {
+    "wip": "WIP",
+    "new": "New",
+    "popular": "Popular"
   },
   "no_results": "No results found"
 }
